--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="com.example.pankajbagariya.contentdemo.Data.NationProvider"
+            android:name=".Data.NationProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
